  * aws-0.22 improved its support for setting etags, which improves
    support for versioned S3 buckets.
  * Serialize use of C magic library, which is not thread safe.
    This fixes failures uploading to S3 when using -J.
  * add, addurl, importfeed, import: Added --no-check-gitignore option
    for finer grained control than using --force.
  * addunused: Don't check .gitignores when adding files.
  * Improve the "Try making some of these repositories available"
    message, with some hints for the user for what to do.
  * Improve --debug output to show pid of processes that are started and
    stopped.
  * sync --all: Sped up seeking to around twice as fast, by avoiding a
    pass over the worktree files when preferred content expressions of the
    local repo and remotes don't use include=/exclude=.
  * Sped up seeking for files to operate on, when using options like
    --copies or --in, by around 20%
  * import --no-content: Check annex.largefiles, and import small
    files into git, the same as is done when importing with content.
    If the largefiles expression needs the file content available
    (due to mimetype or mimeencoding being used), the import will fail.
  * sync: When run without --content, import without copying from
    importtree=yes directory special remotes.
    (Other special remotes may support this later as well.)
  * addurl: Avoid a redundant git ignores check for speed.
  * upgrade: Avoid an upgrade failure of a bare repo in unusual circumstances.
  * httpalso: Support being used with special remotes that do not have
    encryption= in their config.
  * Parse youtube-dl progress output, which lets progress be displayed
    when doing concurrent downloads.

 -- Joey Hess <id@joeyh.name>  Mon, 14 Sep 2020 18:34:37 -0400

git-annex (8.20200908) upstream; urgency=medium

  * Added httpalso special remote, which is useful for accessing 
    content stored on other remotes that is published by http.